made change to css to avoid overlapping of offerings

--- a/css/style.css
+++ b/css/style.css
@@ -739,8 +739,8 @@ a:focus {
 .class .class-item {
     position: relative;
     margin-bottom: 30px;
-    overflow: hidden;
-    transition: .3s;
+    /* overflow: hidden;
+    transition: .3s; */
 }
 
 .class .class-wrap {
